# dogtag-mono-repo

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: android-mobile-e2e.yml  ios-mobile-e2e.yml
apps/: .gitignore
apps/android/: build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/maestro/: zk_e2e.yaml
apps/ios/: project.yml
apps/ios/DogTag/: BigUInt.swift  Consent.swift  ContentView.swift  CredentialDetailScreen.swift  DocumentsScreen.swift  DogTagApp.swift  HomeScreen.swift  Keccak256.swift  LocalStore.swift  Models.swift  Net.swift  ProfileScreen.swift  QR.swift  QrPayload.swift  RecordImporter.swift  ScanScreen.swift  Secp256k1.swift  Theme.swift  TravelScreen.swift  VerifyScreen.swift  Wallet.swift  Wordlist.swift  ZkSelfTestScreen.swift  ZkeyAsset.swift  dogtag_standard.swift  roax.json  zk_selftest.json
apps/ios/DogTag.xcodeproj/: project.pbxproj
apps/ios/maestro/: zk_e2e.yaml
circuits/: Groth16Verifier.sol  README.verification.md  package.json  poseidon-vectors.json  verification.circom
circuits/scripts/: ceremony.sh  gen-vectors.mjs  gen-zk-fixture.mjs  setup.sh  test-circuit.mjs
circuits/test/: poseidon_ref.circom
contracts/: foundry.toml
contracts/deployments/: roax.json
contracts/script/: Deploy.s.sol  GovernanceMigration.sol  MigrateGovernance.s.sol  RedeployConsentKey.s.sol
contracts/src/: ConsentKeyRegistry.sol  DogTagIssuer.sol  DogTagIssuerFactory.sol  DogTagSBT.sol  IERC5192.sol  IssuerRegistry.sol  VerificationRegistry.sol
contracts/test/: ConsentKeyBindFor.t.sol  DogTag.t.sol  GovernanceMigration.t.sol  PoseidonParity.t.sol  Verification.t.sol  ZkIntegration.t.sol  zk-fixture.json
contracts/test/mocks/: MockGroth16Verifier.sol
crates/dogtag-prover-rs/: Cargo.toml
crates/dogtag-prover-rs/src/: lib.rs
crates/dogtag-prover-rs/tests/: gen_input.mjs  prove.rs
crates/dogtag-standard-rs/: Cargo.toml  build.rs
crates/dogtag-standard-rs/bindings/kotlin/uniffi/dogtag_standard/: dogtag_standard.kt
crates/dogtag-standard-rs/bindings/swift/: dogtag_standard.swift  dogtag_standardFFI.h  dogtag_standardFFI.modulemap
crates/dogtag-standard-rs/src/: blake512.rs  consent.rs  eddsa.rs  encode.rs  ffi.rs  field.rs  flatten.rs  leaf.rs  lib.rs  merkle.rs  poseidon.rs  prover_assemble.rs  prover_ffi.rs  schema.rs  types.rs  util.rs  verify.rs  wrap.rs
crates/dogtag-standard-rs/tests/: consent_parity.rs  ffi_parity.rs  flatten_pure.rs  poseidon_parity.rs  prove_parity.rs  pure_logic.rs  sdk_parity.rs  wrap_pure.rs
deploy/: Caddyfile
docs/: BUILD_PROMPT.md  CEREMONY.md  CEREMONY_RUNBOOK.md  CEREMONY_TRANSCRIPT.md  DEMO.md  DEMO_CLICKS.md  DEPLOY.md  DEPLOYMENT.md  DPIA.md  GOVERNANCE_MIGRATION.md  GROOMER_ZK_DEMO.md  LOCAL_DEPLOYMENT.md  MOBILE_BUILD.md  PREREQUISITES.md  PRODUCTION_DEPLOYMENT.md  REMOTE_DEPLOYMENT.md  ROLE_APPS.md  START_HERE.md  TUNNELING.md  architecture.md  implementation.md
docs/research/: 01-data-standards.md  02-attestation.md  03-chain-contracts.md  04-custody-qr.md  05-calendar-appointments.md  06-competitive-apps.md  07-legal-privacy.md  08-wallet-integration.md  09-sbt-lifecycle.md  10-zk-groth16.md  11-consent-attestation.md  12-verification-integration.md  13-poseidon-unification.md  CHANGESPEC-v2.md  CHANGESPEC-v3.md  CHANGESPEC-v4.md  audit-01-contracts.md  audit-02-crypto.md  audit-03-systems.md  audit-04-contracts-v2.md  audit-05-crypto-v2.md  audit-06-systems-v2.md  audit-07-zk-v3.md  audit-08-contracts-v3.md  audit-09-systems-v3.md  audit-10-poseidon-v4.md  audit-11-contracts-v4.md  audit-12-systems-v4.md
references/data_references/: Tables for Onchain Deployment.xlsx
scripts/: demo-bootstrap.sh  demo-down.sh  demo-prepare-phone.sh  demo-up.sh  e2e-roles.sh  e2e-smoke.sh  e2e-zk.sh  remote-up.sh
scripts/zk/: gen_input.mjs
stacks/admin/: .env.example  docker-compose.yml
stacks/admin/api/: Cargo.toml  Dockerfile
stacks/admin/api/src/: app.rs  auth.rs  business.rs  chain.rs  crypto.rs  dns.rs  erasure.rs  lib.rs  main.rs  mongo.rs  routes.rs  startup.rs  store.rs  verify.rs  verify_relay.rs
stacks/admin/api/tests/: business_relay_pure.rs  central.rs  dns_crypto_pure.rs  gate_erasure_unlinkability.rs  gate_pii_off_chain.rs  store_mem_pure.rs  verify_pure.rs  whitelist.rs
stacks/admin/api/tests/common/: mod.rs
stacks/admin/web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
stacks/admin/web/src/: App.tsx  main.tsx  vite-env.d.ts
stacks/government/: .env.example  docker-compose.yml
stacks/government/api/: Cargo.toml  Dockerfile
stacks/government/api/src/: app.rs  chain.rs  lib.rs  main.rs  mongo.rs  routes.rs  store.rs
stacks/government/api/tests/: cross_role.rs  flow_memchain.rs  records_crud.rs
stacks/government/web/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
stacks/government/web/e2e/: government.spec.ts  (+2 more)
stacks/groomer/: .env.example  docker-compose.yml
stacks/groomer/api/: Dockerfile
stacks/groomer/web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
stacks/owner/web/: .env.example  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
stacks/vet/: .env.example  docker-compose.yml
stacks/vet/api/: Cargo.toml  Dockerfile
stacks/vet/api/src/: app.rs  auth.rs  calendar.rs  chain.rs  custody.rs  lib.rs  main.rs  mongo.rs  prover.rs  routes.rs  startup.rs  store.rs  sync.rs  verify.rs
stacks/vet/api/tests/: calendar.rs  custody_seal_persist.rs  flow.rs  flow_memchain.rs  gate_behavioral_privacy.rs  gate_dual_signing_parity.rs  profile_issue.rs  prove_verification.rs  records_crud.rs  store_mem_pure.rs  sync_pure.rs  verify_onchain.rs
stacks/vet/api/tests/common/: mod.rs
stacks/vet/web/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  vite.config.ts
(+108 files in other folders)
