[package]
name = "dogtag-prover-rs"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "DogTag Groth16 proving service (ark-circom + ark-groth16) for the on-chain proof-of-verification ZK path"

[lib]
name = "dogtag_prover"

[dependencies]
# NOTE: ark-circom 0.6 pulls in the ark 0.6 stack. The workspace's `dogtag-standard-rs`
# pins ark 0.5; the two majors coexist in the lockfile as long as ark TYPES never cross
# the crate boundary. We therefore do NOT depend on `dogtag-standard-rs` here and keep all
# ark usage fully internal: ProveInputs are decimal strings, Groth16Output are strings.
ark-circom = { version = "0.6", default-features = false }
ark-groth16 = { version = "0.6", default-features = false }
ark-bn254 = "0.6"
ark-ff = "0.6"
ark-serialize = "0.6"
ark-crypto-primitives = { version = "0.6", default-features = false, features = ["snark"] }
ark-std = "0.6"
num-bigint = "0.4"
rand = { workspace = true }
sha2 = "0.10"

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
