[package]
name = "dogtag-standard-rs"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "DogTag open pet-credential standard — canonicalization, Poseidon Merkle, verify, consent (Rust SDK)"

[lib]
name = "dogtag_standard"
# "lib" keeps the native tests + Rust consumers working; "cdylib" is the Android (UniFFI) artifact;
# "staticlib" is the iOS xcframework artifact.
crate-type = ["lib", "cdylib", "staticlib"]

# UniFFI bindings generator binary (matches the uniffi 0.28.x dep below). Invoke via:
#   cargo run --features uniffi/cli --bin uniffi-bindgen -- generate --language kotlin ...
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
light-poseidon = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
unicode-normalization = { workspace = true }
# Phase 6 mobile FFI deps (additive).
uniffi = { version = "0.28", features = ["cli"] }
getrandom = "0.2"
# EdDSA-BabyJubjub signing — big-integer scalar arithmetic over the BabyJubjub sub-group order.
num-bigint = "0.4"

[dev-dependencies]
rand = { workspace = true }
